fixed speaker's page gap and added team button in mob-nav

--- a/styles/SpeakerCard.scss
+++ b/styles/SpeakerCard.scss
@@ -48,6 +48,9 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  gap:44px;
+  column-gap: 80px;
+  justify-content: center;
 }
 
 .sponsorCard {
